--- a/.deploy/docker-compose.yml
+++ b/.deploy/docker-compose.yml
@@ -47,6 +47,11 @@ services:
       - MAIL_FROM_NAME=Laravel
 
       - FRONTEND_DOMAIN=192.168.30.7
+
+      - PUSHER_APP_ID=874293
+      - PUSHER_APP_KEY=7be3a303223fdcdf62d5
+      - PUSHER_APP_SECRET=91d7feb674c6a3f29d46
+      - PUSHER_APP_CLUSTER=ap2
     networks:
       - app_network
 
