--- a/.deploy/docker-compose.yml
+++ b/.deploy/docker-compose.yml
@@ -53,8 +53,8 @@ services:
       - PUSHER_APP_SECRET=91d7feb674c6a3f29d46
       - PUSHER_APP_CLUSTER=ap2
 
-      - MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-      - MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+      - MIX_PUSHER_APP_KEY=7be3a303223fdcdf62d5
+      - MIX_PUSHER_APP_CLUSTER=ap2
 
     networks:
       - app_network
