--- a/.deploy/docker-compose.yml
+++ b/.deploy/docker-compose.yml
@@ -76,6 +76,10 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
       - MYSQL_DATABASE=application
 
+    volumes:
+      - /var/lib/mysql/mycic:/var/lib/mysql
+
+
   redis:
     image: registry-backend.cic.kz/centras/redis:latest
 
