--- a/.deploy/docker-compose.yml
+++ b/.deploy/docker-compose.yml
@@ -13,7 +13,7 @@ volumes:
 
 services:
   app:
-    image: registry-backend.cic.kz/centras-projects/mycic:master
+    image: reg.cic.kz/centras-projects/mycic:master
     container_name: Application
     ports:
       - 5556:8000/tcp
@@ -67,7 +67,7 @@ services:
       - db
 
   db:
-    image: registry-backend.cic.kz/centras/mysql:5.7
+    image: reg.cic.kz/centras/mysql:5.7
     container_name: Database
 
     networks:
@@ -85,7 +85,7 @@ services:
 
 
   redis:
-    image: registry-backend.cic.kz/centras/redis:latest
+    image: reg.cic.kz/centras/redis:latest
 
     networks:
       - app_network
@@ -94,7 +94,7 @@ services:
     #  - app_redis:/data
 
   pma:
-    image: registry-backend.cic.kz/centras/phpmyadmin:latest
+    image: reg.cic.kz/centras/phpmyadmin:latest
     container_name: pma
     privileged: true
 
@@ -118,7 +118,7 @@ services:
 
   # PHPRedisAdmin
   pra:
-    image: registry-backend.cic.kz/centras/phpredisadmin:latest
+    image: reg.cic.kz/centras/phpredisadmin:latest
     container_name: pra
     restart: unless-stopped
 
@@ -137,7 +137,7 @@ services:
 
   # Перехватчик писем (нужен для локальной разработки)
   mailtrap:
-    image: registry-backend.cic.kz/centras/mailtrap:latest
+    image: reg.cic.kz/centras/mailtrap:latest
     container_name: mailtrap
     restart: unless-stopped
 
