--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - deploy
+  - sonarqube
 
 build-docker:
   stage: build
@@ -25,5 +26,23 @@ deploy-app:
   script: |
     rancher up -d --stack MyCIC --file .deploy/docker-compose.yml --rancher-file .deploy/rancher-compose.yml
     rancher up -d --file .deploy/docker-compose.yml --rancher-file .deploy/rancher-compose.yml --force-upgrade --pull --stack MyCIC --confirm-upgrade app
+
+sonarqube-check:
+  stage: sonarqube
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  tags:
+    - docker
+  variables:
+    # SONAR_TOKEN: "4e91a6da8f68c5941ccaa91118b18d3820b921b0"
+    # SONAR_HOST_URL: "http://192.168.30.30:8888"
+    GIT_DEPTH: 0
+  script:
+    - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=mycic/$CI_COMMIT_REF_SLUG -Dsonar.sources=. -Dsonar.exclusions=vendor/**,public/**,node_modules/**,storage/**
+  allow_failure: true
+  only:
+    - merge_requests
+    - colleagues
 
 ###
