--- a/.env.testing
+++ b/.env.testing
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:juSc87f5zebf4AmGRUu7KXqN7yrXo+uCh86/cK3tbyc=
+APP_KEY=base64:Wv2a3LDW4DQx7Yi4c5voQd0MLljldqc899tHUsCeTbo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mycic_testing
+DB_DATABASE=mycic
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
