--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ deploy-app:
     rancher up -d --file .deploy/docker-compose.yml --rancher-file .deploy/rancher-compose.yml --force-upgrade --pull --stack MyCIC --confirm-upgrade app
 
 sonarqube-check:
+  when: never
   stage: sonarqube
   image:
     name: sonarsource/sonar-scanner-cli:latest
