--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-test-renderer": "^17.0.1",
+    "ant-design-vue": "^1.7.8",
     "antd": "^4.14.1",
     "apexcharts": "^3.22.2",
     "bootstrap": "^4.5.3",
