--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:Wv2a3LDW4DQx7Yi4c5voQd0MLljldqc899tHUsCeTbo=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
@@ -7,9 +7,9 @@ APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=mycic
+DB_DATABASE=mycic_testing
 DB_USERNAME=root
 DB_PASSWORD=root
 
